# NexDR

./: .env.example  .gitignore  README.md  README.zh.md  demo_app.py  pyproject.toml  quick_start.py
configs/deep_research/: continue_judge.md  continue_judge.yaml  deep_research.md  deep_research.yaml  todo_validator.md  todo_validator.yaml
configs/deep_research/tools/: Continue.tool.yaml  ReportWrite.tool.yaml  RunCode.tool.yaml  Search.tool.yaml  TodoWrite.tool.yaml
configs/doc_reader/: doc_read_agent.md  doc_read_agent.yaml
configs/doc_reader/tools/: doc_chunk_read.tool.yaml  doc_chunk_retrieval.tool.yaml  doc_preprocess.tool.yaml  image_caption.tool.yaml
configs/html_creator/: html_creator.yaml  html_creator_agent.md
configs/html_creator/tools/: finish.yaml  initialize_design.yaml  insert_page.yaml  search_image.yaml  update_page.yaml
configs/markdown_report_writer/: report_writer.md  report_writer.yaml
nexdr/agents/: __init__.py  hooks.py  tool_types.py
nexdr/agents/deep_research/: arxiv_search.py  handoff_to_reporter.py  search.py  serper_search.py  update_search_resources.py  web_search.py
nexdr/agents/doc_reader/: chunker.py  doc_preprocess.py  file_parser.py  image_caption.py  jina_parser.py  reader.py  retrieval.py
nexdr/agents/html_creator/: __init__.py  finish.py  html_create.py  initialize_design.py  insert_page.py  merge_slides.py  update_page.py
nexdr/utils/: update_citation.py
